--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
 
                             <div class="info-list">
                                 <ul>
-                                    <li><strong>Address . . . . .</strong> Kyev, UA</li>
+                                    <li><strong>Address . . . . .</strong> Kyiv, UA</li>
                                     <li><strong>Email . . . . .</strong> vtravelvitaliy@gmail.com</li>
                                     <li><strong>Phone . . . . .</strong> +380966506506</li>
                                     <li><strong>FullTime . . . . .</strong> Available</li>
