--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             <div class="text-box">
                                 <p>
                                     <strong>Hello! I’m Vitaliy Chorny.</strong>
-                                    Full Stack developer &amp; Back-end developer from UA, Kyev.
+                                    Full Stack developer &amp; Back-end developer from UA, Kyiv.
                                     I have rich experience in web scraping, search engine scraping, and I'm good at
                                     handling large volumes of data.
                                 </p>
@@ -175,7 +175,7 @@
                                     <li><strong>Experience . . . . .</strong> 5+</li>
                                     <li><strong>Residence . . . . .</strong> Ukraine</li>
                                     <li><strong>Full Time . . . . .</strong> Available</li>
-                                    <li><strong>Address . . . . .</strong> Kyev, UA</li>
+                                    <li><strong>Address . . . . .</strong> Kyiv, UA</li>
                                 </ul>
                             </div>
                         </div>
