--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
                 <!-- profile buttons -->
                 <div class="lnks">
-                    <a target="_blank" href="https://www.linkedin.com/in/vitaliy-chorny-5b7a68198/" class="lnk">
+                    <a target="_blank" href="https://docs.google.com/document/d/1vKQ02QNCU6vYkff3mK-N30gDR4RgogUFmRSCfJyMMoA/edit?usp=sharing" class="lnk">
                         <span class="text">Download CV</span>
                         <span class="ion ion-android-download"></span>
                     </a>
